--- a/configs/model/speech_encoder/wav2vec2.yaml
+++ b/configs/model/speech_encoder/wav2vec2.yaml
@@ -9,4 +9,5 @@ freeze_model: True
 use_one_hidden_state_as_feat: True
 hidden_state_index: -1
 use_att_flat_mask: True
-freeze_layers: False  # just freeze feature feature encoders
+freeze_layers: null  # set N to freeze the first N transformer layers; null freezes only feature encoder
+gradient_checkpointing: False # set to True to save memory at the cost of compute
