--- a/configs/deepspeed/ds_config_stage3.yaml
+++ b/configs/deepspeed/ds_config_stage3.yaml
@@ -1,7 +1,7 @@
 # deepspeed_config stage 0
-#train_batch_size: 128
-micro_batch_per_gpu: 32
-#gradient_acc_step: 1
+train_batch_size: 256
+train_micro_batch_size_per_gpu: 256
+gradient_accumulation_steps: 1
 steps_per_print: 4
 optimizer:
   type: Adam
@@ -48,6 +48,7 @@ zero_optimization:
     device: cpu
   offload_optimizer: 
     device: cpu
+    pin_memory: true  # 在 stage 2 中启用时发现训练速度快很多
   memory_efficient_linear: true
 
 tensorboard:
