--- a/configs/experiment/limit_longest_1-5_stage2.yaml
+++ b/configs/experiment/limit_longest_1-5_stage2.yaml
@@ -6,10 +6,8 @@ experiment_output_dir: outputs/${experiment_name}/${now:%Y-%m-%d}/${now:%H-%M}
 
 deepspeed_config_yaml:
 #  train_batch_size: 96
-#  micro_batch_per_gpu: 24
 #  train_batch_size: 128
   gradient_accumulation_steps: 1
-#  micro_batch_per_gpu: 128
   train_micro_batch_size_per_gpu: 128
 
   zero_optimization:
@@ -34,11 +32,12 @@ train:
   log_every_steps: 4
 
   evaluation:
-    eval_batch_size: 32  # in csa this is set to 32
+    # eval_batch_size: 32  # in csa this is set to 32
+    eval_batch_size: 128  # in csa this is set to 32
     sequential: false
 
   data:
-    num_workers: 0
+    num_workers: 2
     pin_memory: true
 
 
@@ -54,3 +53,13 @@ hydra:
 
 # 24.12.14
 # deepspeed --no_local_rank --include localhost:1,3  pretrain_csa_ds_limit_longest.py +experiment=limit_longest_1-5_stage2
+
+# 26.2.3
+# NCCL_P2P_DISABLE=1 deepspeed \
+#   --include 'localhost:0,4' train.py \
+#   '++train.max_step_iterations=100000' \
+#   '++train.log_every_steps=1' \
+#   '++train.validation_every_steps=500' \
+#   '++train.checkpoint_every_steps=500' \
+#   'deepspeed_config_yaml.train_micro_batch_size_per_gpu=128' \
+#   '+experiment=limit_longest_1-5_stage2'
