feat: Enhance training configurations and data loading for improved performance and reproducibility
---

Summary

- Added configurable data loader prefetching/persistent workers and non‑blocking H2D transfers to smooth GPU utilization in dataloader.py and trainer.py.
- Added deterministic/benchmark switches and wired them through seeding in distributed.py and train.py, plus default config values in config_csa_plus.yaml and both experiment configs.
- Removed fixed train_batch_size across DeepSpeed configs and added a BF16 stage‑2 config at ds_config_stage2_bf16.yaml. Also enabled wall_clock_breakdown in limit_longest_1-5_stage2.yaml and limit_longest_1-5_stage2_noglobalpretrain.yaml with an optional flops_profiler block.
- Added optional offline resampling script preprocess_librispeech_16k.py and documented it in README.md.

--- a/configs/config_csa_plus.yaml
+++ b/configs/config_csa_plus.yaml
@@ -18,3 +18,10 @@ local_rank: 0
 train:
   seed: 123456
   epochs: 100
+  deterministic: true
+  cudnn_benchmark: false
+  data:
+    num_workers: 2
+    pin_memory: true
+    prefetch_factor: 2
+    persistent_workers: true
