--- a/configs/deepspeed/ds_config_stage2_bf16.yaml
+++ b/configs/deepspeed/ds_config_stage2_bf16.yaml
@@ -1,4 +1,4 @@
-# deepspeed_config stage 0
+# deepspeed_config stage 2 (BF16)
 train_micro_batch_size_per_gpu: 256
 gradient_accumulation_steps: 1
 steps_per_print: 4
@@ -10,11 +10,6 @@ optimizer:
     eps: 1e-8
     weight_decay: 3e-7
 scheduler:
-#  type: WarmupLR
-#  params:
-#    warmup_min_lr: 0
-#    warmup_max_lr: 0.001
-#    warmup_num_steps: 1000
   type: WarmupCosineLR
   params:
     total_num_steps: 1e5
@@ -23,37 +18,33 @@ scheduler:
     cos_min_ratio: 1e-4
 gradient_clipping: 1.0
 prescale_gradients: False
-fp16:
+bf16:
   enabled: true
-  auto_cast: False
-  loss_scale: 0
-  initial_scale_power: 16
-  loss_scale_window: 1000
-  hysteresis: 2
-  consecutive_hysteresis: False
-  min_loss_scale: 1
+fp16:
+  enabled: false
 wall_clock_breakdown: False
 zero_optimization:
-  stage: 3
+  stage: 2
   contiguous_gradients: true
   reduce_scatter: true
   reduce_bucket_size: 5e8
-  use_multi_rank_bucket_allreduce: true
+#  reduce_bucket_size: 2e8
+#  reduce_bucket_size: 1e8
   allgather_partitions: true
   allgather_bucket_size: 5e8
+#  allgather_bucket_size: 2e8
+#  allgather_bucket_size: 1e8
   overlap_comm: true
-  load_from_fp32_weights: true
-  offload_param: 
+
+#  offload_param:
+#    device: cpu
+
+  offload_optimizer:
     device: cpu
-  offload_optimizer: 
-    device: cpu
-    pin_memory: true  # 在 stage 2 中启用时发现训练速度快很多
-  memory_efficient_linear: true
+    pin_memory: true  # optimized for efficient CPU-GPU transfer during offload
 
 tensorboard:
   enabled: true
   output_path: ???
 
 #dataloader_drop_last: True  # drop last batch if it's not full, this is important for distributed training
-
-
