feat: Enhance dataset and training configurations; add length bucket sampler and logging improvements
---

已按你的计划完成实现，并保持“低显存验证模式”（未做 GPU 训练）。

**已实现**
- 修复 `train.log` 落盘：
  - 新增 `configure_project_loggers(...)`，统一重配 `__main__`/`train`/`csref.*` logger：`csref/utils/logging_utils.py:68`
  - `setup_logger(...)` 支持从环境变量继承日志目录，保证后续导入模块也能落盘：`csref/utils/logging_utils.py:60`
  - `train.py` 在 Hydra 配置就绪后立即重配日志并写哨兵日志：`train.py:50`
- 更新 stage1 bf16 实验配置：
  - `deterministic=false`、`cudnn_benchmark=true`
  - `num_workers=6`、`prefetch_factor=4`
  - 新增长度分桶开关字段：`configs/experiment/limit_longest_1-3_stage1_bf16.yaml:27`
- 离线缓存/manifest 支持：
  - 数据集新增 `manifest_path`、`offline_trimmed`：`configs/dataset/librispeech.yaml:7`
  - 预处理脚本新增 `--trim`、`--trim-top-db`、`--manifest-path` 并写 TSV manifest：`scripts/preprocess_librispeech_16k.py:62`
  - `LibriSpeechDataset` 支持从 manifest 加载、离线 trim 兼容、长度元数据读取：`csref/data/dataset.py:56`
- 长度分桶 sampler：
  - 新增 `LengthBucketDistributedSampler`，metadata 不可用时自动回退：`csref/data/dataloader.py:26`
- 训练分段计时：
  - 新增 `data_wait/preprocess/fwd/bwd/step/iter` 窗口统计并打印 p50/p90：`csref/core/trainer.py:162`
- 前向轻量化：
  - 关闭不必要 `output_attentions`，`hidden_state_index=-1` 时直接用 `last_hidden_state`：`csref/modeling/speech_encoder.py:120`、`csref/modeling/text_encoder.py:35`

**验证结果（低显存）**
- 语法编译通过：
  - `conda run -n csref_2 python -m py_compile ...`（通过）
- Hydra 配置解析通过：
  - `conda run -n csref_2 python train.py --cfg job +experiment=limit_longest_1-3_stage1_bf16`（通过）
- `train.log` 落盘验证通过：
  - 入口调用后生成并非空：`outputs/logging_integration_test/train.log`
  - 文件包含哨兵行 `Logging to file: ...` 与配置日志

**补充说明**
- 未执行 GPU smoke（按你的约束默认不执行，避免 OOM/抢占）。
- 一次集成命令在本机因权重路径不存在而提前报错，但报错前日志已成功写入，说明落盘修复生效。

---

已按你这轮 benchmark 结果校正了配置，核心结论是：`cudnn_benchmark=true` 在你这个“变长音频 + random cut”场景会显著拖慢训练。

**已修改的配置**
- `configs/experiment/limit_longest_1-3_stage1_bf16.yaml:12`
  `wall_clock_breakdown: false`
- `configs/experiment/limit_longest_1-3_stage1_bf16.yaml:27`
  `deterministic: false`, `cudnn_benchmar

--- a/configs/experiment/limit_longest_1-3_stage2.yaml
+++ b/configs/experiment/limit_longest_1-3_stage2.yaml
@@ -6,7 +6,7 @@ experiment_output_dir: outputs/${experiment_name}/${now:%Y-%m-%d}/${now:%H-%M}
 deepspeed_config_yaml:
   gradient_accumulation_steps: 1
   train_micro_batch_size_per_gpu: 128
-  wall_clock_breakdown: true
+  wall_clock_breakdown: false
   flops_profiler:
     enabled: false
     profile_step: 5
@@ -21,7 +21,8 @@ deepspeed_config_yaml:
 
 train:
   seed: 123456
-  deterministic: true
+  deterministic: false
+  # Variable-length audio + random slice is slower with cudnn benchmark search.
   cudnn_benchmark: false
   min_max_audio_second: [1.0, 3.0]
   # 训练好的CSA模型，在此基础上进一步cut audio训练
@@ -64,7 +65,7 @@ hydra:
 #   '++train.checkpoint_every_steps=500' \
 #   '++train.pretrained_model_checkpoint=/code/data/weights/csa/ckpt_epoch_8.pth' \
 #   '++dataset.root_dir=/code/data/LibriSpeech/LibriSpeech' \
-#   '++speech_encoder.pretrained_path=/code/data/weights/wav2vec2-base' \
-#   '++text_encoder.pretrained_path=/code/data/weights/bert-base-uncased' \
+#   '++model.speech_encoder.pretrained_path=/code/data/weights/wav2vec2-base' \
+#   '++model.text_encoder.pretrained_path=/code/data/weights/bert-base-uncased' \
 #   'deepspeed_config_yaml.train_micro_batch_size_per_gpu=128' \
 #   '+experiment=limit_longest_1-3_stage2'
