Add script to summarize stage1 benchmark logs
- Introduced `summarize_stage1_bench.py` to process benchmark logs from a manifest file.
- Extracts timing metrics and generates CSV and JSON summaries.
- Handles skipped runs and outputs detailed reports including best configurations.
- Supports command-line arguments for input manifest and output directory.

---

已按你的计划完成实现，改动如下。

**已实现内容**
1. 训练计时与多 rank 观测能力
- 新增 `train.enable_cuda_sync_timing` 与 `train.timing_rank_scope` 配置读取与校验：`csref/core/trainer.py:35`、`csref/core/trainer.py:36`
- 增加 CUDA 同步计时（可开关），避免异步计时误判：`csref/core/trainer.py:268`、`csref/core/trainer.py:327`
- 增加 `timing_rank_scope=all` 时的每 rank timing 聚合并在 rank0 打印 `TimingRank`：`csref/core/trainer.py:272`、`csref/core/trainer.py:214`

2. Stage1 BF16 实验配置默认切到离线友好模式
- 新增计时开关默认值：`configs/experiment/limit_longest_1-3_stage1_bf16.yaml:28`
- 新增离线数据默认配置（`manifest_path` 环境变量、`offline_trimmed=true`、`use_trim=false`）：`configs/experiment/limit_longest_1-3_stage1_bf16.yaml:54`

3. benchmark 脚本增强（完整矩阵 + 中断后仍产出统计）
- 默认 sweep 改为你计划的基线：`z=0,1`、`mb=128,160,192`、`log_every=100`、`val/ckpt` 极大：`scripts/run_stage1_ab_bench.sh:71`
- 增加 `SWEEP_NUM_WORKERS_LIST` 与 `SWEEP_PREFETCH_LIST` 网格：`scripts/run_stage1_ab_bench.sh:81`、`scripts/run_stage1_ab_bench.sh:386`
- 增加数据路径与计时开关透传参数：`scripts/run_stage1_ab_bench.sh:35`、`scripts/run_stage1_ab_bench.sh:240`
- 增加中断处理与退出时自动生成“部分统计”：`scripts/run_stage1_ab_bench.sh:317`、`scripts/run_stage1_ab_bench.sh:347`
- manifest 增加新字段（dataset/timing 相关）：`scripts/run_stage1_ab_bench.sh:87`

4. 新增独立汇总脚本与 SOP
- 新增汇总脚本（供 benchmark 脚本调用）：`scripts/summarize_stage1_bench.py:1`
- 新增单机/多机完整流程文档：`docs/stage1_distributed_sop.md:1`

**已验证**
- `bash -n scripts/run_stage1_ab_bench.sh` 通过
- `python -m py_compile csref/core/trainer.py scripts/summarize_stage1_bench.py train.py` 通过
- 已用新汇总脚本对你现有目录成功生成统计文件：`outputs/bench_4090_sweep_stage1/summary.md`

**你现在可直接跑**
1. 按 `docs/stage1_distributed_sop.md` 的第 2 节执行完整 2x4090 sweep。
2. 若要诊断 rank 偏斜，按第 3 节用 `ENABLE_CUDA_SYNC_TIMING=

--- a/configs/experiment/limit_longest_1-3_stage1_bf16.yaml
+++ b/configs/experiment/limit_longest_1-3_stage1_bf16.yaml
@@ -25,6 +25,8 @@ deepspeed_config_yaml:
 train:
   seed: 123456
   deterministic: false
+  enable_cuda_sync_timing: false
+  timing_rank_scope: rank0
   # Variable-length audio + random slice is slower with cudnn benchmark search.
   cudnn_benchmark: false
   min_max_audio_second: [1.0, 3.0]
@@ -48,6 +50,12 @@ train:
     persistent_workers: true
     use_length_bucket: false
     bucket_boundaries_second: [1.0, 1.5, 2.0, 2.5, 3.0]
+
+dataset:
+  # Set LIBRISPEECH_MANIFEST_PATH for offline 16k+trim manifest.
+  manifest_path: ${oc.env:LIBRISPEECH_MANIFEST_PATH,null}
+  offline_trimmed: true
+  use_trim: false
 
 
 hydra:
