Enhance model training configurations and scripts
- Updated .gitignore to exclude additional files and directories.
- Modified training configuration YAML to include options for Torch compilation and fixed audio slicing.
- Adjusted Wav2Vec2 and BERT model configurations to support attention implementation options.
- Enhanced Trainer class to handle new training parameters and implement model compilation.
- Updated benchmark scripts to reflect changes in dataset paths and added precision/attention policy.
- Improved logging and manifest generation to include new parameters related to precision and attention.
- Revised documentation for clarity on data preparation and training procedures.

---

**已实现内容**

1. `run_stage1_ab_bench.sh` 新增跨平台自动策略与新开关
- 新增环境变量：`PRECISION_MODE`、`ATTN_IMPL`、`ENABLE_TORCH_COMPILE`、`TORCH_COMPILE_MODE`、`TORCH_COMPILE_DYNAMIC`、`ENABLE_LENGTH_FIXED_SLICE`、`FIXED_SLICE_SECONDS`（`scripts/run_stage1_ab_bench.sh:49`）。
- 启动前用 Python 探测 GPU 能力并自动决策精度/attention（`scripts/run_stage1_ab_bench.sh:273`）。
- `auto` 规则已实现：`cc>=8 -> bf16`，否则 `fp16`；`ATTN_IMPL=auto` 时 `fp16->eager`，`bf16->sdpa`（`scripts/run_stage1_ab_bench.sh:367`, `scripts/run_stage1_ab_bench.sh:390`）。
- `flash_attention_2` 不可用或 `cc<8` 自动降级到 `sdpa` 并告警（`scripts/run_stage1_ab_bench.sh:403`）。
- DeepSpeed 命令改为按“实际精度”写入 `bf16/fp16`，并注入 compile/attention/fixed-slice 覆盖（`scripts/run_stage1_ab_bench.sh:552`, `scripts/run_stage1_ab_bench.sh:561`, `scripts/run_stage1_ab_bench.sh:566`, `scripts/run_stage1_ab_bench.sh:572`）。
- `run_manifest.tsv` 扩展字段：`precision_mode_req/effective`、`attn_impl_effective`、`torch_compile_enabled`、`gpu_name`、`gpu_cc`（`scripts/run_stage1_ab_bench.sh:99`, `scripts/run_stage1_ab_bench.sh:651`）。
- 启动日志增加 runtime profile 与有效策略打印（`scripts/run_stage1_ab_bench.sh:756`）。

2. 训练侧支持 compile 回退与 fixed slice
- 新增 `train.enable_torch_compile / torch_compile_mode / torch_compile_dynamic / fixed_slice_seconds` 读取与校验（`csref/core/trainer.py:39`）。
- 在 `deepspeed.initialize` 前尝试 `torch.compile`，失

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ outputs/
 
 *.pyc
 
+test_cmd.txt
+data/LibriSpeech
+data/weights/bert-base-uncased
+data/weights/wav2vec2-base
+data/weights/csa/ckpt_epoch_8.pth
