--- a/configs/model/speech_encoder/wav2vec2.yaml
+++ b/configs/model/speech_encoder/wav2vec2.yaml
@@ -12,3 +12,4 @@ use_att_flat_mask: True
 freeze_layers: null  # set N to freeze the first N transformer layers; null freezes only feature encoder
 gradient_checkpointing: False # set to True to save memory at the cost of compute
 attn_implementation: null # set to eager | sdpa | flash_attention_2; null uses transformers default
+torch_dtype: null # set to bf16 | fp16 | fp32; null/auto follows transformers default
